정상작동 확인 완료

--- a/webapp/assets/css/board.css
+++ b/webapp/assets/css/board.css
@@ -30,8 +30,8 @@ h1 {
 }
 #page {
 	margin-top: 20px;
-	display: flex;
-	justify-content: center;
+	display: flex; /* 가운데 정렬 */
+	justify-content: center; /* 가운데 정렬 */
 }
 
 /*********************** 검색 ***********************/
