--- a/webapp/assets/css/course-view.css
+++ b/webapp/assets/css/course-view.css
@@ -263,22 +263,25 @@ input[type=radio] {display:none;}
 .record-txt .record-info span {
 	font-size: 12px;
 	color: rgb(101, 101, 101);
-	margin-right: 5px;
+	margin-right: 7px;
 }
 /* 글쓴이 아이콘 */
 .record-txt .record-info span img {
 	margin-right: 3px;
-	width: 12px;
-	height: 12px;
+	width: 20px;
+	height: 20px;
 }
 /* 박스 설정 */
 .record-txt .record-info .box {
 	width: 48px;
-	height: 15px;
+	height: 18px;
 	border-radius: 10px;
 	text-align: center;
 	color: rgb(255,255,255);
 	font-weight: 700;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .pink {background-color: rgb(255, 52, 120);}
 .blue {background-color: rgb(50, 108, 249);}
