--- a/webapp/assets/css/includes.css
+++ b/webapp/assets/css/includes.css
@@ -87,6 +87,7 @@
 
 #header #user-menu #check-btn, .menubars { 
 	display: none;
+	outline: none;
 }
 
 #header #user-menu #check-btn:checked ~ .menubars { 
