--- a/webapp/assets/css/listRead.css
+++ b/webapp/assets/css/listRead.css
@@ -100,7 +100,7 @@ tr>#date, #up {
 	color: #666;
 	border:none;
 }
-#delete_m {
+#delete {
 	margin-left: 5px;
 	width : 82px;
 	height: 35px;
@@ -111,44 +111,9 @@ tr>#date, #up {
 
 /******/
 #writer_btnS {margin-top: 2px;}
-#modify_s {
-	width : 23px;
-	height: 30px;
-	background-color: #fff;
-	color: #666;
-	font-size : 10pt;
-	border:none;
-}
-#delete_s {
-	margin-left: 1px;
-	width : 23px;
-	height: 30px;
-	background-color: #fff;
-	color: #666;
-	font-size : 10pt;
-	border:none;
-}
 
 /******/
 #writer_btnXS {margin-top: 16px;}
-#modify_xs {
-	width : 20px;
-	height: 25px;
-	background-color: #fff;
-	color: #666;
-	font-size : 9pt;
-	border: none;
-}
-#delete_xs {
-	margin-left: 0.5px;
-	width : 20px;
-	height: 25px;
-	background-color: #fff;
-	color: #666;
-	font-size : 9pt;
-	border: none;
-}
-
 /********************** 댓글 **********************/
 
 #top_comment {
