--- a/webapp/assets/css/together_read.css
+++ b/webapp/assets/css/together_read.css
@@ -48,7 +48,7 @@ table {
 	margin-top: 25px;
 	width : 90%;
 	height: 470px;
-	margin-left: 14%;
+	margin-left: 11%;
 }
 tr {height: 100px}
 /** 아이콘 **/
@@ -57,18 +57,20 @@ tr {height: 100px}
 	height: 50px;
 	float: left;
 }
-#stopwatch, #calendar,#map_icon , #user {margin-right: 15px;}
+#stopwatch, #calendar, #map_icon , #user {margin-right: 15px;}
 #marking {margin-right: 8px;}
 /** 글씨 **/
 #route, #d-date, #distance, #user_num, #location{
 	margin-top: 10px;
+	width: 300px;
 	font-size : 18pt;
 	font-weight : bold;
 }
 #content {
 	padding-top: 17px;
 	font-size : 15pt;
-	line-height:180%
+	padding-left: 6px;
+	line-height: 180%
 }
 
 /******************** 작성자 버튼 ********************/
@@ -192,7 +194,8 @@ tr {height: 100px}
 #replybox {
 	width: 87.5%;
 	height: 35px;
-	margin-left: 38px;
+	float: left;
+	margin-left: 31px;
 	margin-bottom: 25px;
 	border: solid 1px #c0c0c0;
 	border-radius: 3px;
@@ -200,8 +203,9 @@ tr {height: 100px}
 #reply_btn {
 	width: 66px;
 	height: 35px;
-	margin-left: 17px;
+	margin-left: 10px;
 	padding-top: 3px;
+	margin-bottom: 25px;
 	font-size: 10pt;
 	border: none;
 	border: solid 1px #000;
