--- a/webapp/assets/css/read.css
+++ b/webapp/assets/css/read.css
@@ -263,7 +263,8 @@ tr>#date, #up {
 #replybox {
 	width: 86%;
 	height: 35px;
-	margin-left: 35px;
+	float: left;
+	margin-left: 31px;
 	margin-bottom: 25px;
 	border: solid 1px #c0c0c0;
 	border-radius: 3px;
@@ -271,7 +272,8 @@ tr>#date, #up {
 #reply_btn {
 	width: 63px;
 	height: 35px;
-	margin-left: 17px;
+	margin-left: 10px;
+	margin-bottom: 25px;
 	padding-top: 3px;
 	font-size: 10pt;
 	border: none;
