--- a/webapp/assets/css/together_read.css
+++ b/webapp/assets/css/together_read.css
@@ -75,6 +75,11 @@ tr {height: 100px}
 
 /******************** 작성자 버튼 ********************/
 
+.comment-inline {display :inline-block;}
+.comment {
+	display :inline-block;
+	margin-right: 8px;
+}
 #writer_btnM {margin-left: 79.5%;}
 #modify_m {
 	width : 82px;
@@ -84,7 +89,6 @@ tr {height: 100px}
 	border:none;
 }
 #delete_m {
-	margin-left: 5px;
 	width : 82px;
 	height: 35px;
 	background-color: #000;
@@ -92,7 +96,11 @@ tr {height: 100px}
 	border:none;
 }
 /******/
-#writer_btnS {margin-top: 2px;}
+#writer_btnS {
+	margin-top: 2px;
+	margin-bottom: 15px;
+	display :inline-block;
+}
 #modify_s {
 	width : 23px;
 	height: 30px;
@@ -109,25 +117,6 @@ tr {height: 100px}
 	color: #666;
 	font-size : 10pt;
 	border:none;
-}
-/******/
-#writer_btnXS {margin-top: 16px;}
-#modify_xs {
-	width : 20px;
-	height: 25px;
-	background-color: #fff;
-	color: #666;
-	font-size : 9pt;
-	border: none;
-}
-#delete_xs {
-	margin-left: 0.5px;
-	width : 20px;
-	height: 25px;
-	background-color: #fff;
-	color: #666;
-	font-size : 9pt;
-	border: none;
 }
 
 /********************** 댓글 **********************/
