--- a/webapp/assets/css/together_read.css
+++ b/webapp/assets/css/together_read.css
@@ -128,6 +128,7 @@ tr {height: 100px}
 	font-size : 16pt;
 	font-weight : bold;
 }
+#comment-box {padding-top: 25px;}
 #commentbox {
 	margin-left: 10%;
 	width : 82%;
