--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -22,6 +22,7 @@ h1 {
 }
 
 /******************* 소분류 카테고리 *******************/
+
 #top_side {
 	margin: 20px auto;
 	display: flex;
@@ -43,6 +44,7 @@ h1 {
 
 
 /***************** 함께하기 만들기 버튼 *****************/
+
 #together-nav {width:100%; height:90px;}
 #to_make {
 	float: left;
@@ -124,7 +126,10 @@ h1 {
 }
 .content_course {
 	font-size : 13pt;
-	padding: 20px 120px 20px 120px;
+	padding: 20px 50px 20px 50px;
+	margin-left: 28px;
+	display: flex; /* 가운데 정렬 */
+	justify-content: center; /* 가운데 정렬 */
 }
 .bookmark {
 	margin-left: 12%;
