--- a/webapp/assets/css/includes.css
+++ b/webapp/assets/css/includes.css
@@ -122,6 +122,8 @@
 /* 푸터 스타일 */
 .footer{
 	min-width: 1200px;
+	position: relative;
+	z-index: 901;
 	justify-content: space-between;
 	line-height: 18px;		/*줄 높이 설정값*/
 	font-size: 12px;
