--- a/webapp/WEB-INF/views/map/test.html
+++ b/webapp/WEB-INF/views/map/test.html
@@ -8,59 +8,30 @@
 <body>
 
 
-				<div id="menu-cate" class="filter-menu" tabindex='-1'>
-					<h3>종목</h3>
-					<p>중복선택이 가능합니다<p>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-walk">산책</label>
-					</div>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-jogging">조깅</label>
-					</div>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-running">런닝</label>
-					</div>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-marathon">마라톤</label>
-					</div>
-					<hr>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-bicycle">자전거</label>
-					</div>
-					<hr>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-draw">그림그리기</label>
-					</div>
-				</div>
 
 				<div id="menu-dist" class="filter-menu">
-					<h3>거리</h3>
-					<div class="menu-range"></div>
+					<div>
+						<h3>거리</h3>
+						<span class="values">
+				            <span id="range1">
+				                0
+				            </span>
+				            <span id="range-sign"> ~ </span>
+				            <span id="range2">
+				                50
+				            </span>
+				        </span>
+			        </div>
+					<div class="menu-range">
+						<div class="slider-track"></div>
+						<input id="slider-1" type="range" min="1" max="50" value="1" name="minDist" oninput="slideOne()">
+						<input id="slider-2" type="range" min="1" max="50" value="50" name="maxDist" oninput="slideTwo()">
+					</div>
 				</div>
 				
-				<div id="menu-diff" class="filter-menu" tabindex='-1'>
-					<h3>난이도</h3>
-					<p>중복선택이 가능합니다<p>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-">쉬움</label>
-					</div>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-">보통</label>
-					</div>
-					<div class="menu-option">
-						<img src="${pageContext.request.contextPath }/assets/image/map/check_off.png">
-						<label for="chk-">어려움</label>
-					</div>
-				</div>
 
 
 </body>
+<script type="text/javascript" src="../../../assets/js/jquery/jquery-1.12.4.js"></script>
+<script type="text/javascript" src="../../../assets/js/test.js"></script>
 </html>
