--- a/webapp/assets/css/together.css
+++ b/webapp/assets/css/together.css
@@ -69,7 +69,9 @@ h1 {
 	font-size : 13pt;
 }
 #rightside ul > li {float: left;}
-#tag_btn, #joined_btn {margin-left: 7px;}
+#tag_btn, #joined_btn {
+	margin-left: 7px;
+}
 
 /******************** 함께하기 표 ********************/
 
@@ -82,6 +84,7 @@ h1 {
 	margin: 20px 5px;
 	margin-left: 43px;
 }
+.chart tbody {cursor: pointer;}
 #list {
 	height: auto;
 	margin-top : 20px;
